Fix z-index bug about some panes being above select dropdowns

--- a/src/components/console/style.less
+++ b/src/components/console/style.less
@@ -16,7 +16,6 @@
 
 .console {
     position: relative;
-    z-index: 1;
     width: 100%;
     font-size: 1.1em;
     .btn2 {
