--- a/src/components/projecteditor/style-console.less
+++ b/src/components/projecteditor/style-console.less
@@ -73,7 +73,6 @@
 }
 .console {
     position: relative;
-    z-index: 1;
     width: 100%;
     height: 100%;
     font-size: 1.1em;
